--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1061,10 +1061,11 @@ input[type="checkbox"] {
 }
 
 .carousel-wrap {
+  margin-bottom: -200px;
 	background-color: transparent;
 	margin: 3rem auto;
-	padding: 1% 5%;
-	width: 80%;
+	padding: 1% 1%;
+	width: 60%;
 	position: relative;
 }
 
